--- a/Vienna/Interfaces/de.lproj/GroupFolder.strings
+++ b/Vienna/Interfaces/de.lproj/GroupFolder.strings
@@ -8,5 +8,5 @@
 "35.title" = "Abbrechen";
 
 /* Class = "NSTextFieldCell"; title = "Enter the group folder name:"; ObjectID = "36"; */
-"36.title" = "Geben Sie den Namen des Gruppenordners ein:";
+"36.title" = "Gib den Namen des Gruppenordners ein:";
 
