--- a/Vienna/Interfaces/de.lproj/FeedCredentials.strings
+++ b/Vienna/Interfaces/de.lproj/FeedCredentials.strings
@@ -5,7 +5,7 @@
 "33.title" = "Benutzername:";
 
 /* Class = "NSTextFieldCell"; title = "Access to %@ requires you to provide log in credentials"; ObjectID = "34"; */
-"34.title" = "Der Zugriff auf %@ benötigt Benutzerdaten von Ihnen";
+"34.title" = "Zugriff auf %@ erfordert deine Benutzerdaten";
 
 /* Class = "NSTextFieldCell"; title = "Password:"; ObjectID = "37"; */
 "37.title" = "Passwort:";
