--- a/Vienna/Resources/pt.lproj/Localizable.strings
+++ b/Vienna/Resources/pt.lproj/Localizable.strings
@@ -427,6 +427,11 @@
 /* Placeholder title of a search field */
 "Search all articles" = "Procurar todos os artigos";
 
+/* Toolbar item label
+   Toolbar item palette label
+   Toolbar item tooltip */
+"Search Articles" = "Procurar Artigos";
+
 /* No comment provided by engineer. */
 "Search Results" = "Procurar resultados";
 
