--- a/Vienna/Resources/zh-Hans.lproj/Localizable.strings
+++ b/Vienna/Resources/zh-Hans.lproj/Localizable.strings
@@ -502,6 +502,11 @@
 /* Placeholder title of a search field */
 "Search all articles" = "搜索所有文章";
 
+/* Toolbar item label
+   Toolbar item palette label
+   Toolbar item tooltip */
+"Search Articles" = "搜索文章";
+
 /* No comment provided by engineer. */
 "Search Results" = "搜索结果";
 
