--- a/Vienna/Resources/fr.lproj/Localizable.stringsdict
+++ b/Vienna/Resources/fr.lproj/Localizable.stringsdict
@@ -18,6 +18,22 @@
 			<string>%d nouveaux articles récupérés</string>
 		</dict>
 	</dict>
+	<key>%d new unread articles retrieved</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@articles@</string>
+		<key>articles</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d nouvel article non lu récupéré</string>
+			<key>other</key>
+			<string>%d nouveaux articles non lus récupérés</string>
+		</dict>
+	</dict>
 	<key>%d subscriptions successfully exported</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
