--- a/Vienna/Resources/uk.lproj/Localizable.stringsdict
+++ b/Vienna/Resources/uk.lproj/Localizable.stringsdict
@@ -22,6 +22,26 @@
 			<string>Отримано %d нових статей</string>
 		</dict>
 	</dict>
+	<key>%d new unread articles retrieved</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@articles@</string>
+		<key>articles</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>few</key>
+			<string>%d new unread articles retrieved</string>
+			<key>many</key>
+			<string>%d new unread articles retrieved</string>
+			<key>one</key>
+			<string>%d new unread article retrieved</string>
+			<key>other</key>
+			<string>%d new unread articles retrieved</string>
+		</dict>
+	</dict>
 	<key>%d subscriptions successfully exported</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
