--- a/Vienna/Resources/zh-Hans.lproj/Localizable.stringsdict
+++ b/Vienna/Resources/zh-Hans.lproj/Localizable.stringsdict
@@ -16,6 +16,20 @@
 			<string>有 %d 篇新文章</string>
 		</dict>
 	</dict>
+	<key>%d new unread articles retrieved</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@articles@</string>
+		<key>articles</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>other</key>
+			<string>收到了 %d 篇新文章</string>
+		</dict>
+	</dict>
 	<key>%d subscriptions successfully exported</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
