--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,20 @@ most recent build should be at the top of this file.
 
 Thanks!
 
+3.8.4
+-----
+- Add ability to hide/show the enclosure bar (through the View menu)
+- Various OpenReader related improvements:
+    - Better URL handling in Preferences / Settings window
+    - Allow access over http or https (useful FreshRSS servers used in internal LAN)
+    - When refreshing all folders, prevent same error dialog from popping repeatedly
+    - Fix status discrepancies (especially persisting error icons)
+- Fix width of left hand pane not being kept after application relaunch (on macOS Ventura)
+- Modify details in Preferences / Settings window to better conform to the Human Interface Guidelines
+- Modernize code : use newer APIs when available, prepare to sandboxing
+- Update Sparkle to version 2.3.0
+- Optimized for macOS Ventura : built with macOS 13 SDK (still compatible with macOS 10.12 and above)
+
 3.8.3
 -----
 - Fix "Open Link in New Tab" contextual menu item (on main tab when the new browser option is enabled)
